# dmfdeploy

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  QWEN.md  README.md  SECURITY.md  STATUS.md  TODOS.md
.agents/skills/: README.md
.claude/: settings.json
.claude/agents/: README.md  architecture-reviewer.md  docs-writer.md  frontend-ux.md  k8s-operator.md  network-media.md  process-docs.md  quick-fixer.md  security-secrets.md  test-runner.md
.claude/commands/: agentic-run.md  agentic-tick.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: automerge.yml  backlog-hygiene.yml  ci.yml  dco.yml  guard.yml  issue-close-reconciler.yml
.qwen/: settings.json
docs/: GLOSSARY.md  INDEX.md  JOURNEY.md  OPEN-QUESTIONS.md  SCRIPTS.md  THESIS.md  WORKING-MODEL.md  architectural-commitments-v1.md  diagram-design-guide.md  status-graphic.html
docs/agentic/: CONSTITUTION.md  ISSUE-TEMPLATES.md  README.md  STATUS-FILE-CONVENTION.md  autonomous-decisions.md  (+5 more)
patterns/: public-manifest.toml
tests/: acceptance-matrix.sh  hook-scoping.sh  worktree-regression.sh
wizard-spike/: .gitignore  README.md  pyproject.toml
wizard-spike/src/dmf_wizard/: __init__.py  cli.py  manifest.py  orchestrator.py  profiles.py  runner.py  state.py  types.py
wizard-spike/tests/: test_manifest.py  test_orchestrator.py  test_profiles.py  test_runner.py  test_state.py
wizard-spike/tests/fixtures/: env_check.sh  fail.sh
(+387 files in other folders)
