[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmf-wizard-spike"
version = "0.0.1"
description = "Architectural spike for the DMF init-wizard Python rewrite."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
dmf-wizard-spike = "dmf_wizard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dmf_wizard"]
